# LabOS

./: .gitignore
practice1/: CMakeLists.txt  README.md  README.md~  main.c
practice2/: CMakeLists.txt  kernel_drivers.c  kernel_service.c  main.c  svc_handler.S  syscalls.h  syscalls.s  user_app.c
practice3/: CMakeLists.txt  a  kernel_service.c  main.c  pendsv.s  svc_handler.s  user_app.c
practice4/: CMakeLists.txt  README.md  kernel_drivers.c  kernel_service.c  main.c  scheduler.c  scheduler.h  syscalls.h  user_app.c
practice4/executables/: practice4_phaseA.uf2  practice4_phaseB.uf2
practice5/: CMakeLists.txt  README.md  kernel_service.c  main.c  pendsv.s  scheduler.c  scheduler.h  semaphore.c  semaphore.h  syscalls.h  syscalls.s  user_app.c
practice5/executables/: README.md  phaseA.uf2  phaseB.uf2  practice5_a.uf2
practice6/: Dockerfile  main.c  mmu.c  mmu.h  paging_basic.c  paging_basic.h  paging_on_demand.c  paging_on_demand.h  ram.c  ram.h  tlb.c  tlb.h  validator_alpine  vm_bl.c  vm_bl.h
practice7/: CMakeLists.txt  main.c
practice8/: main_template.c
practice9/: main_template.c
